<resources>
    <string name="app_name">MyTravelGuide</string>
    <string name="login_page">LOGIN PAGE</string>
    <string name="enter_email_id">Enter Email Id</string>
    <string name="enter_valid_email_address">* Enter valid email address</string>
    <string name="password_field_cannot_be_empty">* Password cannot be empty</string>
    <string name="login">LOGIN</string>
    <string name="enter_password">Enter Password</string>
    <string name="don_t_have_an_account_yet">Don\'t have an account yet?</string>
    <string name="create_now"><u>Create Now</u></string>
    <string name="create_account">CREATE ACCOUNT</string>
    <string name="enter_username">Enter Username</string>
    <string name="username_cannot_be_empty">* Username cannot be empty</string>
    <string name="password_should_contain">Password should contain :</string>
    <string name="minimum_one_uppercase">Minimum one uppercase</string>
    <string name="at_least_8_characters">At least 8 characters</string>
    <string name="minimum_one_number">Minimum one number</string>
    <string name="minimum_one_symbol">Minimum one symbol</string>
    <string name="sign_up">SIGN UP</string>
    <string name="my_trips">My Trips</string>
    <string name="dashboard">Dashboard</string>
    <string name="about_us">About Us</string>
    <string name="upcoming">Upcoming</string>
    <string name="international_trips">International Trips</string>
    <string name="my_alarm">My Alarm</string>
    <string name="log_out">Log Out</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="must_visit_cities"><u>Must Visit Cities</u></string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="map">Map</string>
</resources>