<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="viewmodel"
            type="com.example.mytravelguide.viewmodel.LoginViewModel"/>
    </data>
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/nestedScroll"
        android:background="@drawable/blueback">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="28dp"
            android:src="@drawable/logo"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/text1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="152dp"
            android:text="@string/login_page"
            android:textColor="#FF9800"
            android:textSize="40sp"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/text1"
            android:id="@+id/layout1"
            android:layout_marginTop="50dp"
            android:layout_marginRight="30dp"
            android:layout_marginLeft="30dp"
            app:boxBackgroundColor="@color/white"
            android:hint="@string/enter_email_id"
            android:textColorHint="#9C27B0">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@={viewmodel.userMail}"
                android:inputType="textEmailAddress"
                android:textColor="@color/black"/>
        </com.google.android.material.textfield.TextInputLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/text2"
            app:layout_constraintTop_toBottomOf="@id/layout1"
            android:text="@string/enter_valid_email_address"
            android:textSize="15sp"
            android:visibility="invisible"
            android:textColor="#DA0323"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginStart="30dp"/>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/text2"
            android:id="@+id/layout2"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/black"
            android:layout_marginTop="30dp"
            app:boxBackgroundColor="@color/white"
            android:layout_marginRight="30dp"
            android:layout_marginLeft="30dp"
            android:hint="@string/enter_password"
            android:textColorHint="#9C27B0">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@={viewmodel.userPass}"
                android:inputType="textPassword"
                android:textColor="@color/black"/>
        </com.google.android.material.textfield.TextInputLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/layout2"
            android:text="@string/password_field_cannot_be_empty"
            android:textSize="15sp"
            android:id="@+id/text3"
            android:textColor="#B53F51"
            android:visibility="invisible"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginStart="30dp"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="60dp"
            app:layout_constraintTop_toBottomOf="@id/text3"
            android:layout_marginTop="40dp"
            android:textStyle="bold"
            android:id="@+id/btn"
            android:onClick="@{()->viewmodel.onLoginClicked()}"
            android:layout_marginLeft="100dp"
            android:layout_marginRight="100dp"
            android:backgroundTint="#AB67B6"
            android:text="@string/login"
            android:textColor="#170F12"/>

        <TextView
            android:id="@+id/txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/don_t_have_an_account_yet"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toRightOf="@id/txt"
            app:layout_constraintTop_toBottomOf="@id/btn"
            android:layout_marginTop="24dp"
            android:layout_marginStart="10dp"
            android:text="@string/create_now"
            android:textColor="@color/design_default_color_primary_dark"
            android:textStyle="bold"
            android:onClick="@{()->viewmodel.onTextClicked()}"/>





    </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</layout>


