<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="viewmodel"
            type="com.example.mytravelguide.viewmodel.AccountViewModel"/>
    </data>
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/scroll"
        android:background="@drawable/blueback">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/con">
        <TextView
            android:id="@+id/text1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/create_account"
            android:textColor="#FF9800"
            android:textSize="40sp"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/text1"
            android:id="@+id/layout1"
            android:layout_marginTop="50dp"
            android:layout_marginRight="30dp"
            android:layout_marginLeft="30dp"
            app:boxBackgroundColor="@color/white"
            android:hint="@string/enter_username"
            android:textColorHint="#9C27B0">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@={viewmodel.userName}"
                android:inputType="text"
                android:textColor="@color/black"/>
        </com.google.android.material.textfield.TextInputLayout>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/text2"
                app:layout_constraintTop_toBottomOf="@id/layout1"
                android:text="@string/username_cannot_be_empty"
                android:visibility="invisible"
                android:textSize="15sp"
                android:textColor="#DA0323"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_marginStart="30dp"/>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/text2"
            android:id="@+id/layout2"
            android:layout_marginTop="30dp"
            app:boxBackgroundColor="@color/white"
            android:layout_marginRight="30dp"
            android:layout_marginLeft="30dp"
            android:hint="@string/enter_email_id"
            android:textColorHint="#9C27B0">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@={viewmodel.userMail}"
                android:inputType="textEmailAddress"
                android:textColor="@color/black"/>
        </com.google.android.material.textfield.TextInputLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/layout2"
            android:text="@string/enter_valid_email_address"
            android:textSize="15sp"
            android:id="@+id/text3"
            android:textColor="#B53F51"
            android:visibility="invisible"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginStart="30dp"/>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/text3"
            android:id="@+id/layout3"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/black"
            android:layout_marginTop="30dp"
            app:boxBackgroundColor="@color/white"
            android:layout_marginRight="30dp"
            android:layout_marginLeft="30dp"
            android:hint="@string/enter_password"
            android:textColorHint="#9C27B0">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@={viewmodel.userPass}"
                android:inputType="textPassword"
                android:textColor="@color/black" />
        </com.google.android.material.textfield.TextInputLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/layout3"
            android:text="@string/password_should_contain"
            android:layout_marginStart="30dp"
            android:id="@+id/text5"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginTop="10dp"
            android:textSize="23sp"
            android:textColor="#FF9800"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="30dp"
            app:layout_constraintTop_toBottomOf="@id/text5"
            android:id="@+id/linear1"
            android:layout_marginTop="15dp"
            android:layout_marginStart="15dp"
            android:orientation="horizontal">
            <androidx.cardview.widget.CardView
                android:layout_width="22dp"
                android:layout_height="22dp"
                app:cardBackgroundColor="@color/white"
                android:layout_gravity="center"
                android:id="@+id/card1"
                app:cardCornerRadius="25dp">
                <ImageView
                    android:layout_width="15dp"
                    android:layout_height="15dp"
                    android:background="@drawable/ic_baseline_check_24"
                    android:layout_gravity="center"/>

            </androidx.cardview.widget.CardView>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/minimum_one_uppercase"
                android:gravity="center|start"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="10dp"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="30dp"
            app:layout_constraintTop_toBottomOf="@id/linear1"
            android:id="@+id/linear2"
            android:layout_marginTop="15dp"
            android:layout_marginStart="15dp"
            android:orientation="horizontal">
            <androidx.cardview.widget.CardView
                android:layout_width="22dp"
                android:layout_height="22dp"
                android:id="@+id/card2"
                app:cardBackgroundColor="@color/white"
                android:layout_gravity="center"
                app:cardCornerRadius="25dp">

                <ImageView
                    android:layout_width="10dp"
                    android:layout_height="12dp"
                    android:layout_gravity="center"
                    android:background="@drawable/ic_baseline_check_24" />

            </androidx.cardview.widget.CardView>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/at_least_8_characters"
                android:gravity="center|start"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="10dp"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="30dp"
            app:layout_constraintTop_toBottomOf="@id/linear2"
            android:id="@+id/linear3"
            android:layout_marginTop="15dp"
            android:layout_marginStart="15dp"
            android:orientation="horizontal">
            <androidx.cardview.widget.CardView
                android:layout_width="22dp"
                android:layout_height="22dp"
                app:cardBackgroundColor="@color/white"
                android:id="@+id/card3"
                android:layout_gravity="center"
                app:cardCornerRadius="25dp">
                <ImageView
                    android:layout_width="15dp"
                    android:layout_height="15dp"
                    android:background="@drawable/ic_baseline_check_24"
                    android:layout_gravity="center"/>

            </androidx.cardview.widget.CardView>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/minimum_one_number"
                android:gravity="center|start"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="10dp"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="30dp"
            app:layout_constraintTop_toBottomOf="@id/linear3"
            android:id="@+id/linear4"
            android:layout_marginTop="15dp"
            android:layout_marginStart="15dp"
            android:orientation="horizontal">
            <androidx.cardview.widget.CardView
                android:layout_width="22dp"
                android:layout_height="22dp"
                app:cardBackgroundColor="@color/white"
                android:id="@+id/card4"
                android:layout_gravity="center"
                app:cardCornerRadius="25dp">
                <ImageView
                    android:layout_width="15dp"
                    android:layout_height="15dp"
                    android:background="@drawable/ic_baseline_check_24"
                    android:layout_gravity="center"/>

            </androidx.cardview.widget.CardView>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/minimum_one_symbol"
                android:gravity="center|start"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="10dp"/>

        </LinearLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="60dp"
            app:layout_constraintTop_toBottomOf="@id/linear4"
            android:layout_marginTop="40dp"
            android:textStyle="bold"
            android:id="@+id/btn"
            android:onClick="@{()->viewmodel.onSignClicked()}"
            android:layout_marginLeft="100dp"
            android:layout_marginRight="100dp"
            android:backgroundTint="#AB67B6"
            android:text="@string/sign_up"
            android:textColor="#170F12"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</layout>